syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "RpcValidationService";

package validationService;

service RpcValidationService {
  rpc ValidateReceipt(RpcValidateReceiptRequest) returns (RpcReceipt);
}

message RpcValidateReceiptRequest {
  string base64String = 1;
}

message RpcReceipt {
  int64 id = 1;
  int64 bankId = 2;
  string code = 3;
  double amount = 4;
  bool isValid = 5;
  int32 LastFour = 6;
  google.protobuf.Timestamp checkedAt = 7;
  google.protobuf.StringValue link = 8;
}
